--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -5,6 +5,7 @@
 .icon-home:before { content: '\e803'; } /* '' */
 .icon-basket:before { content: '\e804'; } /* '' */
 .icon-mail-alt:before { content: '\f0e0'; } /* '' */
+.icon-angle-double-down:before { content: '\f103'; } /* '' */
 .icon-dollar:before { content: '\f155'; } /* '' */
 .icon-facebook-official:before { content: '\f230'; } /* '' */
 .icon-percent:before { content: '\f295'; } /* '' */
