--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?54304248');
-  src: url('../font/fontello.eot?54304248#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?54304248') format('woff2'),
-       url('../font/fontello.woff?54304248') format('woff'),
-       url('../font/fontello.ttf?54304248') format('truetype'),
-       url('../font/fontello.svg?54304248#fontello') format('svg');
+  src: url('../font/fontello.eot?98578790');
+  src: url('../font/fontello.eot?98578790#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?98578790') format('woff2'),
+       url('../font/fontello.woff?98578790') format('woff'),
+       url('../font/fontello.ttf?98578790') format('truetype'),
+       url('../font/fontello.svg?98578790#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?54304248#fontello') format('svg');
+    src: url('../font/fontello.svg?98578790#fontello') format('svg');
   }
 }
 */
@@ -61,6 +61,7 @@
 .icon-home:before { content: '\e803'; } /* '' */
 .icon-basket:before { content: '\e804'; } /* '' */
 .icon-mail-alt:before { content: '\f0e0'; } /* '' */
+.icon-angle-double-down:before { content: '\f103'; } /* '' */
 .icon-dollar:before { content: '\f155'; } /* '' */
 .icon-facebook-official:before { content: '\f230'; } /* '' */
 .icon-percent:before { content: '\f295'; } /* '' */
