--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,13 @@
   scroll-behavior: smooth;
 }
 
+h2{
+  margin: 0;
+  padding: 0;
+
+
+}
+
 /************************/
 /*****ELEMENTY HTML******/
 /************************/
@@ -57,9 +64,7 @@ aside img {
 
 .hamburger{
 display: none;
-
 }
-
 
 .altLogo {
   display: none;
@@ -154,7 +159,8 @@ nav ul li a i {
   display: flex;
   position: relative;
   background-color: white;
-  height: 85vh;
+  min-height: 900px ;
+  height: 90vh;
   color: black;
   justify-content: flex-end;
 }
@@ -224,6 +230,10 @@ nav ul li a i {
   background-color: white;
   height: 70vh;
   color: #3C3C3C;
+  z-index: 90;
+  justify-content: flex-start;
+  align-self: flex-end;
+
 }
 
 .about_me_main {
@@ -235,11 +245,11 @@ nav ul li a i {
   height: 100%;
 }
 
-
-.about_me_main p {
+.about_me_main h2 {
   vertical-align: bottom;
   top: 15%;
   left: -10%;
+  font-size: 40px;
   transform: rotate(-90deg);
   letter-spacing: 10px;
   font-weight: 700;
@@ -308,10 +318,11 @@ nav ul li a i {
 }
 
 
-.galery_main p {
+.galery_main h2 {
   vertical-align: bottom;
   top: 15%;
   left: -10%;
+  font-size: 40px;
   transform: rotate(-90deg);
   letter-spacing: 10px;
   font-weight: 700;
@@ -424,10 +435,11 @@ nav ul li a i {
 }
 
 
-.serwises_main p {
+.serwises_main h2 {
   vertical-align: bottom;
   top: 15%;
     left: -10%;
+    font-size: 40px;
   transform: rotate(-90deg);
   letter-spacing: 10px;
   font-weight: 700;
@@ -647,10 +659,11 @@ nav ul li a i {
   height: 80vh;
 }
 
-.price_main p {
+.price_main h2 {
   vertical-align: bottom;
   top: 15%;
   left: -10%;
+  font-size: 40px;
   transform: rotate(-90deg);
   letter-spacing: 10px;
   font-weight: 700;
@@ -807,6 +820,7 @@ nav ul li a i {
 footer {
   display: flex;
   background-color: black;
+  min-height: 350px;
   height: 40vh;
   width: 1571px;
   text-align: center;
@@ -881,7 +895,7 @@ footer {
 
 .footer_email i {
   color: white;
-  font-size: 80px;
+  font-size: 70px;
   transition: ease .5s;
 }
 
@@ -917,15 +931,6 @@ footer {
   position: relative;
 }
 
-
-
-.footer_allrights {
-  background-color: black;
-  color: white;
-  justify-content: center;
-  height: 5vh;
-}
-
 .footer_map {
   flex-basis: 20%;
 }
@@ -937,7 +942,19 @@ footer {
   transform-origin: bottom;
 }
 
-@media all and (max-width: 590px)  {
+.footer_email_phone{
+  display: none;
+}
+
+.footer_allrights {
+  background-color: black;
+  color: white;
+  justify-content: center;
+  height: 5vh;
+  
+}
+
+@media all and (min-width: 100px) and (max-width: 300px)  {
   body {
     width: 100%;
     font-size: 6px;
@@ -1024,13 +1041,6 @@ section {
     right: 0;
      }
 
-  /* .main_wraper img {
-    display: flex;
-    right: 0%;
-    max-width: 100%;
-    width: 100%;
-    height: auto;
-  } */
 
   .main_wraper div {
     display: none;
@@ -1065,13 +1075,13 @@ section {
     left: 30%;
   }
 
-  .about_me_main p {
+  .about_me_main h2 {
     vertical-align: initial;
-    top: 35%;
+    top: 20%;
     left: 40%;
-    font-size: 40px;
+    font-size: 30px;
     transform: rotate(0deg);
-    letter-spacing: 10px;
+    letter-spacing: 5px;
   }
 
   .about_me_img {
@@ -1118,13 +1128,13 @@ section {
     left: 30%;
   }
 
-  .galery_main p {
+  .galery_main h2 {
     vertical-align: initial;
     top: 10%;
     left: 40%;
-    font-size: 40px;
+    font-size: 30px;
     transform: rotate(0deg);
-    letter-spacing: 10px;
+    letter-spacing: 5px;
   }
 
 
@@ -1167,7 +1177,7 @@ section {
   .galery_page_4 span {
     display: flex;
     width: 80vw;
-    height: 300px;
+    height: 20vh;
     margin-top: 5px;
     background-color: #BBBBBB;
 
@@ -1183,7 +1193,6 @@ section {
   .serwises_wraper {
     margin-top: 15px;
     width: 100%;
-    ;
     height: auto;
     flex-direction: column-reverse;
   }
@@ -1204,13 +1213,13 @@ section {
     left: 30%;
   }
 
-  .serwises_main p {
+  .serwises_main h2 {
     vertical-align: initial;
     top: 10%;
     left: 40%;
-    font-size: 40px;
+    font-size: 30px;
     transform: rotate(0deg);
-    letter-spacing: 10px;
+    letter-spacing: 5px;
   }
 
   .serwises_main ul {
@@ -1319,12 +1328,616 @@ section {
     left: 30%;
   }
 
-  .price_main p {
+  .price_main h2 {
     vertical-align: initial;
     transform: rotate(0deg);
-    letter-spacing: 10px;
+    letter-spacing: 5px;
     top: 10%;
     left: 40%;
+    font-size: 30px;
+  }
+
+
+  .price_main ul {
+    position: relative;
+    top: 15%;
+    left: 5%;
+  }
+
+  .price_main ul li a {
+    font-size: 12px;
+    margin-bottom: 5px;
+  }
+
+
+  .price {
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 450px;
+  }
+
+  .price_page_1,
+  .price_page_2,
+  .price_page_3,
+  .price_page_4,
+  .price_page_5,
+  .price_page_6,
+  .price_page_7 {
+    width: 100vw;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .price_page_1 span:nth-child(1),
+  .price_page_2 span:nth-child(1),
+  .price_page_3 span:nth-child(1),
+  .price_page_4 span:nth-child(1),
+  .price_page_5 span:nth-child(1),
+  .price_page_6 span:nth-child(1),
+  .price_page_7 span:nth-child(1) {
+    width: 90vw;
+    height: 10vh;
+    margin-left: 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    min-width: 0;
+  }
+
+  .price_page_1 span:nth-child(2),
+  .price_page_2 span:nth-child(2),
+  .price_page_3 span:nth-child(2),
+  .price_page_4 span:nth-child(2),
+  .price_page_5 span:nth-child(2),
+  .price_page_6 span:nth-child(2),
+  .price_page_7 span:nth-child(2) {
+    width: 90vw;
+    height: auto;
+    margin-left: 0px;
+    margin-bottom: 10px;
+    min-width: 0;
+  }
+
+  .price span ul {
+    margin-top: 10px;
+    margin-left: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .price span ul li {
+    margin-left: 0px;
+    font-size: 10px;
+    letter-spacing: 2px;
+    line-height: 20px;
+  }
+
+
+  .price span i {
+    border: 0px solid #d86232;
+    height: 0px;
+    width: 0px;
+    border-radius: 0%;
+    margin-top: 10px;
+    font-size: 8px;
+    line-height: 20px;
+  }
+
+  .price span a {
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  /************************/
+  /********STOPKA**********/
+  /************************/
+
+  footer {
+    background-color: black;
+    height: auto;
+    width: 100%;
+    flex-direction: column;
+    font-size: 14px;
+
+  }
+
+  .footer_wraper {
+    margin-top: 5px;
+    flex-direction: column;
+  }
+
+  .footer_adress {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    margin-left: 0px;
+    margin-top: 0px;
+    line-height: 20px;
+  }
+
+  .footer_price {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 5px;
+    height: 100px;
+    line-height: 10px;
+  }
+
+  .footer_price h1 {
+    font-size: 18px;
+    margin-bottom: 5px;
+    letter-spacing: 2px;
+  }
+
+  .footer_price ul {
+    font-size: 14px;
+    line-height: 15px;
+  }
+
+  .footer_email {
+    flex-direction: column;
+    flex-grow: 1;
+    flex-basis: 5%;
+    margin: 0px 0px 0px 0px;
+    line-height: 15px;
+  }
+
+  .footer_email div {
+    margin-top: 10px;
+    letter-spacing: 10px;
+  }
+
+  .footer_email i {
+    font-size: 40px;
+  }
+
+   .footer_email a[Alt_title]:after {
+    display: none;
+  }
+
+  .footer_email a[alt_title] {
+    display: none;
+  } 
+
+  .footer_allrights {
+    background-color: black;
+    height: auto;
+    margin: 10px 10px 5px 10px;
+  }
+  
+  .footer_email_phone {
+    display: flex;
+    flex-direction: column;
+    font-size: 4px;
+    height: 10vh;
+    text-align: left;
+   justify-content: center;
+   
+  }
+
+  
+  .footer_email_phone i {
+   color: white;
+   list-style-type: none;
+   text-decoration: none;
+   font-size: 15px;
+   margin-left: 5vw;
+   margin-right: 10px;
+   margin-bottom: 10px;
+  }
+
+  .footer_email_phone a {
+    color: white;
+    list-style-type: none;
+    text-decoration: none;
+    font-size: 10px;
+    letter-spacing:2px ;
+    margin-bottom: 3px;
+   }
+
+  .footer_map {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .footer_map img {
+    justify-items: center;
+    width: 85%;
+  }
+}
+
+@media all and (min-width: 301px) and (max-width: 590px)  {
+  body {
+    width: 100%;
+    font-size: 6px;
+    flex-direction: column;
+  }
+
+  main {
+    flex-direction: column;
+    height: 80px;
+  }
+
+  
+section {
+  width: 100%;
+}
+
+  aside {
+    margin: 0%;
+  }
+
+  aside img {
+    max-width: 50%;
+    width: 50%;
+  }
+
+  .hamburger {
+    display: flex;
+    justify-content: center;
+    margin-top: 0px;
+    font-size: 20px;
+    }
+
+  nav {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    margin-left: 0%;
+    width: 100%;
+    top: -270px;
+    align-items: center;
+    transition: .2s linear;
+    z-index: -10;
+  }
+
+  .hamburger.on {
+    transform: rotate(540deg);
+    }
+
+  nav.on {
+    top: 0px;
+    z-index: -10;
+  }
+
+  nav ul {
+    flex-direction: column;
+  }
+
+  nav ul li ::before {
+    display: none;
+  }
+
+  nav ul li ::after {
+    display: none;
+  }
+
+  nav ul :hover {
+    background-color: #b3745ca4;
+  }
+
+  /************************/
+  /*****STRONA GŁÓWNA******/
+  /************************/
+
+  .main_wraper {
+    display: flex;
+    height: auto;
+    min-height: 120px;
+  }
+
+  .main_img{
+    width: 100vw;
+    height: 100vw;
+    right: 0;
+     }
+
+  /* .main_wraper img {
+    display: flex;
+    right: 0%;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+  } */
+
+  .main_wraper div {
+    display: none;
+  }
+
+  /************************/
+  /*********O MNIE*********/
+  /************************/
+
+  #about_me {
+    display: flex;
+  }
+
+  .about_me_wraper {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+  }
+
+  .about_me_main {
+    margin-left: 0%;
+    width: 100%;
+    min-height: 20vh;
+    height: auto;
+  }
+
+  .about_me_main h1 {
+    font-size: 40px;
+    top: 35%;
+    left: 30%;
+  }
+
+  .about_me_main h2 {
+    vertical-align: initial;
+    top: 35%;
+    left: 50%;
+    font-size: 40px;
+    transform: rotate(0deg);
+    letter-spacing: 5px;
+  }
+
+  .about_me_img {
+    display: none;
+  }
+
+  .about_me_txt {
+    margin-top: 10px;
+    width: 80%;
+    transform: translate(0%, 0%);
+  }
+
+  .about_me_txt p {
+    margin-top: 10px;
+    width: 100%;
+    font-size: 14px;
+  }
+
+  .about_me_txt h1 {
+    font-size: 0px;
+    margin: 10px;
+  }
+
+
+  /************************/
+  /********GALERIA*********/
+  /************************/
+
+  .galery_wraper {
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+
+  }
+
+  .galery_main {
+    width: 100%;
+    height: 200px;
+  }
+
+  .galery_main h1 {
+    font-size: 40px;
+    top: 10%;
+    left: 30%;
+  }
+
+  .galery_main h2 {
+    vertical-align: initial;
+    top: 10%;
+    left: 50%;
+    font-size: 40px;
+    transform: rotate(0deg);
+    letter-spacing: 5px;
+  }
+
+
+  .galery_main ul {
+    top: 40%;
+    left: 5%;
+  }
+
+
+  .galery_main ul li a {
+    display: flex;
+    text-decoration: none;
+    font-size: 12px;
+    margin-bottom: 5px;
+  }
+
+
+  .galery {
+    width: 100%;
+    height: auto;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
+    justify-content: center;
+  }
+
+  .galery_page_1,
+  .galery_page_2,
+  .galery_page_3,
+  .galery_page_4 {
+    flex-wrap: nowrap;
+    margin-top: 10px;
+    flex-grow: 0;
+    flex-direction: column;
+
+  }
+
+  .galery_page_1 span,
+  .galery_page_2 span,
+  .galery_page_3 span,
+  .galery_page_4 span {
+    display: flex;
+    width: 80vw;
+    height: 20vh;
+    margin-top: 5px;
+    background-color: #BBBBBB;
+
+  }
+
+
+  /************************/
+  /*********USŁUGI*********/
+  /************************/
+
+
+
+  .serwises_wraper {
+    margin-top: 15px;
+    width: 100%;
+    ;
+    height: auto;
+    flex-direction: column-reverse;
+  }
+
+  .serwises {
+    width: 100%;
+    height: auto;
+  }
+
+  .serwises_main {
+    width: 100%;
+    height: 230px;
+  }
+
+  .serwises_main h1 {
+    font-size: 40px;
+    top: 10%;
+    left: 30%;
+  }
+
+  .serwises_main h2 {
+    vertical-align: initial;
+    top: 10%;
+    left: 50%;
+    font-size: 40px;
+    transform: rotate(0deg);
+    letter-spacing: 5px;
+  }
+
+  .serwises_main ul {
+    flex-direction: column;
+    top: 35%;
+    left: 5%;
+  }
+
+  .serwises_main ul li a {
+    font-size: 12px;
+    margin-bottom: 5px;
+  }
+
+  .serwises_page_1,
+  .serwises_page_2,
+  .serwises_page_3,
+  .serwises_page_4,
+  .serwises_page_5,
+  .serwises_page_6,
+  .serwises_page_7 {
+    font-size: 8px;
+  }
+
+  .serwises_page_1 h1,
+  .serwises_page_2 h1,
+  .serwises_page_3 h1,
+  .serwises_page_4 h1,
+  .serwises_page_5 h1,
+  .serwises_page_6 h1,
+  .serwises_page_7 h1 {
+    height: 30px;
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 14px;
+    align-self: center;
+  }
+
+  .serwises_page_1 span,
+  .serwises_page_2 span,
+  .serwises_page_3 span,
+  .serwises_page_4 span,
+  .serwises_page_5 span,
+  .serwises_page_6 span,
+  .serwises_page_7 span {
+    font-size: 12px;
+    width: 70%;
+    height: 130px;
+    padding: 5px;
+    line-height: 15px;
+    margin-bottom: 10px;
+  }
+
+  .serwises_page_1 span h1,
+  .serwises_page_2 span h1,
+  .serwises_page_3 span h1,
+  .serwises_page_4 span h1,
+  .serwises_page_5 span h1,
+  .serwises_page_6 span h1,
+  .serwises_page_7 span h1 {
+    font-size: 12px;
+    margin-bottom: 4px;
+    width: 100%;
+  }
+
+  .serwises_page_1 span i,
+  .serwises_page_2 span i,
+  .serwises_page_3 span i,
+  .serwises_page_4 span i,
+  .serwises_page_5 span i,
+  .serwises_page_6 span i,
+  .serwises_page_7 span i {
+    font-size: 12px;
+    margin-top: 3px;
+
+  }
+
+  /************************/
+  /********CENNIK**********/
+  /************************/
+
+  #price {
+    width: 100%;
+    margin: 0;
+
+  }
+
+  .price_wraper {
+    margin-top: 5px;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+
+  }
+
+  .price_main {
+    width: 100%;
+    height: 250px;
+    margin-left: 0;
+    flex-direction: row;
+  }
+
+  .price_main h1 {
+    font-size: 40px;
+    top: 10%;
+    left: 30%;
+  }
+
+  .price_main h2 {
+    vertical-align: initial;
+    transform: rotate(0deg);
+    letter-spacing: 5px;
+    top: 10%;
+    left: 50%;
     font-size: 40px;
   }
 
@@ -1372,6 +1985,7 @@ section {
     margin-left: 0px;
     margin-top: 10px;
     margin-bottom: 10px;
+    min-width: 0;
   }
 
   .price_page_1 span:nth-child(2),
@@ -1385,6 +1999,7 @@ section {
     height: auto;
     margin-left: 0px;
     margin-bottom: 10px;
+    min-width: 0;
   }
 
   .price span ul {
@@ -1667,13 +2282,13 @@ section {
     left: 30%;
   }
 
-  .about_me_main p {
+  .about_me_main h2 {
     vertical-align: initial;
     top: 35%;
-    left: 40%;
+    left: 50%;
     font-size: 40px;
     transform: rotate(0deg);
-    letter-spacing: 10px;
+    letter-spacing: 5px;
   }
 
   .about_me_img {
@@ -1719,13 +2334,13 @@ section {
     left: 30%;
   }
 
-  .galery_main p {
+  .galery_main h2 {
     vertical-align: initial;
     top: 10%;
-    left: 40%;
+    left: 50%;
     font-size: 40px;
     transform: rotate(0deg);
-    letter-spacing: 10px;
+    letter-spacing: 5px;
   }
 
 
@@ -1805,13 +2420,13 @@ section {
     left: 30%;
   }
 
-  .serwises_main p {
+  .serwises_main h2 {
     vertical-align: initial;
     top: 10%;
-    left: 40%;
+    left: 50%;
     font-size: 40px;
     transform: rotate(0deg);
-    letter-spacing: 10px;
+    letter-spacing: 5px;
   }
 
   .serwises_main ul {
@@ -1920,12 +2535,12 @@ section {
     left: 30%;
   }
 
-  .price_main p {
+  .price_main h2 {
     vertical-align: initial;
     transform: rotate(0deg);
-    letter-spacing: 10px;
+    letter-spacing: 5px;
     top: 10%;
-    left: 40%;
+    left: 50%;
     font-size: 40px;
   }
 
@@ -2030,19 +2645,19 @@ section {
     width: 100%;
     flex-direction: column;
     font-size: 14px;
-
   }
 
   .footer_wraper {
     margin-top: 5px;
     flex-direction: column;
+    height: auto;
   }
 
   .footer_adress {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100px;
+    height: auto;
     margin-left: 0px;
     margin-top: 0px;
     line-height: 20px;
@@ -2053,7 +2668,7 @@ section {
     flex-direction: column;
     align-items: center;
     margin: 5px;
-    height: 100px;
+    height: auto;
     line-height: 10px;
   }
 
@@ -2103,7 +2718,7 @@ section {
     display: flex;
     flex-direction: column;
     font-size: 4px;
-    height: 10vh;
+    height: auto;
     text-align: left;
    justify-content: center;
    
@@ -2165,11 +2780,12 @@ section {
 
   .main_wraper {
     height: 50vh;
+    min-height: 450px ;
   }
 
   .main_img{
     width: 40vw;
-       height: 40vw;
+    height: 40vw;
      }
 
   /* .main_wraper img {
@@ -2219,7 +2835,7 @@ section {
   }
 
 
-  .about_me_main p {
+  .about_me_main h2 {
     top: 15%;
     left: -25%;
     font-size: 30px;
@@ -2250,7 +2866,7 @@ section {
   /************************/
 
 
-  .galery_main p {
+  .galery_main h2 {
     top: 15%;
     left: -20%;
   }
@@ -2270,7 +2886,7 @@ section {
   /************************/
 
 
-  .serwises_main p {
+  .serwises_main h2 {
     top: 15%;
     left: -20%;
 
@@ -2357,7 +2973,7 @@ section {
     margin-top: 0%;
   }
 
-  .price_main p {
+  .price_main h2 {
     top: 15%;
     left: -20%;
   }
@@ -2541,6 +3157,7 @@ section {
 
   .main_wraper {
     height: 60vh;
+    min-height: 500px ;
   }
 
   .main_img{
@@ -2595,7 +3212,7 @@ section {
   }
 
 
-  .about_me_main p {
+  .about_me_main h2 {
     top: 15%;
     left: -20%;
   }
@@ -2624,7 +3241,7 @@ section {
   /************************/
 
 
-  .galery_main p {
+  .galery_main h2 {
     top: 15%;
     left: -20%;
   }
@@ -2644,7 +3261,7 @@ section {
   /************************/
 
 
-  .serwises_main p {
+  .serwises_main h2 {
     top: 15%;
     left: -20%;
 
@@ -2731,7 +3348,7 @@ section {
     margin-top: 0%;
   }
 
-  .price_main p {
+  .price_main h2 {
     top: 15%;
     left: -20%;
   }
@@ -2914,6 +3531,7 @@ section {
 
   .main_wraper {
     height: 70vh;
+    min-height: 600px ;
   }
 
   /* .main_wraper img {
@@ -2968,7 +3586,7 @@ section {
   }
 
 
-  .about_me_main p {
+  .about_me_main h2 {
     top: 15%;
     left: -10%;
   }
@@ -2997,7 +3615,7 @@ section {
   /************************/
 
 
-  .galery_main p {
+  .galery_main h2 {
     top: 15%;
     left: -10%;
   }
@@ -3017,7 +3635,7 @@ section {
   /************************/
 
 
-  .serwises_main p {
+  .serwises_main h2 {
     top: 15%;
     left: -10%;
 
@@ -3104,7 +3722,7 @@ section {
     margin-top: 0%;
   }
 
-  .price_main p {
+  .price_main h2 {
     top: 15%;
     left: -10%;
   }
@@ -3284,6 +3902,7 @@ section {
 
   .main_wraper {
     height: 75vh;
+    min-height: 700px ;
   }
 
   .main_img{
@@ -3340,7 +3959,7 @@ section {
   }
 
 
-  .about_me_main p {
+  .about_me_main h2 {
     top: 15%;
     left: -10%;
   }
@@ -3369,7 +3988,7 @@ section {
   /************************/
 
 
-  .galery_main p {
+  .galery_main h2 {
     top: 15%;
     left: -10%;
   }
@@ -3389,7 +4008,7 @@ section {
   /************************/
 
 
-  .serwises_main p {
+  .serwises_main h2 {
     top: 15%;
     left: -10%;
   }
@@ -3475,7 +4094,7 @@ section {
     margin-top: 0%;
   }
 
-  .price_main p {
+  .price_main h2 {
     top: 15%;
     left: -10%;
   }
@@ -3629,10 +4248,3 @@ section {
     height: auto;
   }
 }
-
-
-/* 1050px (komputer)
-950px (tablet poziomo)
-750px (tablet pionowo)
-450px (telefon poziomo)
-300px (telefon pionowo) */
