--- a/css/style.css
+++ b/css/style.css
@@ -545,6 +545,7 @@ nav ul li a i {
   border-bottom: 1px solid #d86232;
   width: 100%;
   text-align: left;
+  margin-bottom: 20px;
 }
 
 .serwises_page_1 span i,
