--- a/css/style_galery.css
+++ b/css/style_galery.css
@@ -79,6 +79,8 @@
   height: 33%;
   background-color: #BBBBBB;
   transition: 0.2s linear;
+  pointer-events: none;
+
 }
 
   .galery_page_1 span img,
@@ -89,6 +91,9 @@
   height: 100%;
   object-fit: scale-down;
   transition: 0.2s linear;
+  pointer-events: auto;
+
+ 
   }
 
   .galery_page_1 span:hover,
@@ -96,8 +101,8 @@
   .galery_page_3 span:hover,
   .galery_page_4 span:hover {
   transform: scale(3);
-  background-color: transparent;
- 
+  background-color: rgba(0, 0, 0, 0.7);
+
   }
 
   .galery_page_1 span img:hover,
@@ -105,7 +110,9 @@
   .galery_page_3 span img:hover,
   .galery_page_4 span img:hover {
     object-fit: scale-down;
+    pointer-events: stroke;
     background-color: rgba(0, 0, 0, 0.7);
+    
   }
 
 /********************************/
@@ -278,7 +285,7 @@
   .galery_page_2 span:hover,
   .galery_page_3 span:hover,
   .galery_page_4 span:hover {
-  transform: scale(1.7);
+  transform: scale(2);
   }
 
   /********************************/
@@ -430,7 +437,7 @@
   .galery_page_2 span:hover,
   .galery_page_3 span:hover,
   .galery_page_4 span:hover {
-  transform: scale(1.7);
+    transform: scale(2);
   }
 
     /********************************/
@@ -580,7 +587,7 @@
   .galery_page_2 span:hover,
   .galery_page_3 span:hover,
   .galery_page_4 span:hover {
-  transform: scale(1.7);
+    transform: scale(2);
   }
 
     /********************************/
