--- a/css/style_nav.css
+++ b/css/style_nav.css
@@ -79,6 +79,7 @@ nav ul li a i {
 
 .main_img{
   display: flex;
+  position: relative;
   width: 40vw;
   height: 40vw;
   background-color: var(--bg_secondary_light) ;
@@ -86,10 +87,37 @@ nav ul li a i {
 }
 
 .main_img img{
+  position: absolute;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+
+.main_pic0 {
+  display: flex; 
+  opacity: 1;
+ 
+}
+
+.main_pic1 {
+  display: flex;
+  opacity: 0;
+  animation: main 12s infinite linear; 
+  animation-delay: 8s;
+  }
+
+  .main_pic2 {
+    display: flex;
+    opacity: 0;
+    animation: main 12s infinite linear;
+    animation-delay: 4s;
+    }
+
+    .main_pic3 {
+      display: flex;
+      opacity: 0;
+      animation: main 12s infinite linear; 
+      }
 
 .main_wraper div {
   position: absolute;
