--- a/css/style_about_me.css
+++ b/css/style_about_me.css
@@ -40,17 +40,20 @@
   display: flex;
   background-color: #DFDFDF;
   height: 60vh;
-  width: 50vh;
-  transform: translate(-35%, 0%);
+  width: 55vh;
+  transform: translate(-40%, 0%);
   overflow: hidden;
 }
 
 .about_me_img img {
-  position: absolute;
-  bottom: 0;
-  width: 120%;
-  height: auto;
-  transform: translate(-5%, 10%);
+  width: 100%;
+  height: 100%;
+  /* position: absolute; */
+  /* bottom: 0; */
+  /* width: 100%;
+  height: auto; */
+  object-fit: cover;
+  /* transform: translate(-5%, 10%); */
 }
 
 .about_me_txt {
@@ -256,7 +259,7 @@
 
   .about_me_main {
     margin-left: 1%;
-    width: 20vw;
+    width: 25vw;
     height: 100%;
   }
 
@@ -268,19 +271,19 @@
   }
 
   .about_me_img {
-    width: 30vh;
-    height: 90%;
+    width: 40vh;
+    height: 80%;
     transform: translate(-25%, 0%);
   }
-
+/* 
   .about_me_img img {
     width: 160%;
     transform: translate(-15%, 0%);
-  }
+  } */
 
   .about_me_txt p {
     font-size: 15px;
-    width: 70%;
+    width: 80%;
   }
 
   .about_me_txt h1 {
@@ -308,14 +311,15 @@
   }
 
   .about_me_img {
-    width: 30vh;
+    width: 40vh;
+    height: 80%;
     transform: translate(-30%, 0%);
   }
 
-  .about_me_img img {
+  /* .about_me_img img {
     width: 160%;
     transform: translate(-15%, 0%);
-  }
+  } */
 
   .about_me_txt p {
     font-size: 17px;
@@ -347,14 +351,15 @@
   }
 
   .about_me_img {
-    width: 35vh;
+    width: 40vh;
+    height: 80%;
     transform: translate(-35%, 0%);
   }
 
-  .about_me_img img {
+  /* .about_me_img img {
     width: 150%;
     transform: translate(-13%, 0%);
-  }
+  } */
 
   .about_me_txt p {
     font-size: 17px;
@@ -386,13 +391,14 @@
 
   .about_me_img {
     width: 40vh;
+    height: 80%;
     transform: translate(-40%, 0%);
   }
 
-  .about_me_img img {
+  /* .about_me_img img {
     width: 150%;
     transform: translate(-13%, 10%);
-  }
+  } */
 
   .about_me_txt p {
     font-size: 17px;
