--- a/css/style_galery.css
+++ b/css/style_galery.css
@@ -68,7 +68,8 @@
   flex-grow: 1;
   justify-content: space-around;
   align-content: space-around;
-
+  z-index: 1;
+  /* pointer-events: none; */
 }
 
 .galery_page_1 span,
@@ -78,44 +79,47 @@
   display: flex;
   width: 33%;
   height: 33%;
-  background-color: #BBBBBB;
+  background-color: rgba(187, 187, 187, 0.8);
   transition: 0.2s linear;
+  /* pointer-events: none; */
+  
 }
+
 
   .galery_page_1 span img,
   .galery_page_2 span img,
   .galery_page_3 span img,
   .galery_page_4 span img {
-  width: 100%;
+    width: 100%;
   height: 100%;
   object-fit: scale-down;
+  pointer-events: auto;
+  cursor: pointer;
+ 
   }
 
-  .galery_page_1 span:hover,
+  .picUp
+ {
+  transform: scale(3);
+  }
+
+  /* .galery_page_1 span:hover,
   .galery_page_2 span:hover,
   .galery_page_3 span:hover,
   .galery_page_4 span:hover {
   transform: scale(3);
   background-color: rgba(0, 0, 0, 0.7);
-  /* pointer-events: none; */
-  }
+  pointer-events: none;
 
-  /* .galery_page_1 span img:hover,
-  .galery_page_2 span img:hover,
-  .galery_page_3 span img:hover,
-  .galery_page_4 span img:hover {
-    object-fit: scale-down;
-    background-color: rgba(0, 0, 0, 0.7);
-    
-  } */
+  }
 
   .galery_page_1 span img:hover,
   .galery_page_2 span img:hover,
   .galery_page_3 span img:hover,
   .galery_page_4 span img:hover {
-
-    z-index: auto;
-  }
+    pointer-events: none;
+    
+  } */
 
 /********************************/
 /******WYŚWIETLANIE GALERII******/
@@ -126,6 +130,7 @@
   .galery_page_3 span:nth-child(1),
   .galery_page_4 span:nth-child(1){
     transform-origin: top left;
+ 
   }
 
   .galery_page_1 span:nth-child(2),
@@ -283,12 +288,17 @@
     background-color: #BBBBBB;
   }
 
-  .galery_page_1 span:hover,
+  .picUp
+ {
+  transform: scale(2);
+  }
+
+  /* .galery_page_1 span:hover,
   .galery_page_2 span:hover,
   .galery_page_3 span:hover,
   .galery_page_4 span:hover {
   transform: scale(2);
-  }
+  } */
 
   /********************************/
 /******WYŚWIETLANIE GALERII******/
@@ -435,12 +445,17 @@
     background-color: #BBBBBB;
   }
 
-  .galery_page_1 span:hover,
+  .picUp
+  {
+   transform: scale(2);
+   }
+
+  /* .galery_page_1 span:hover,
   .galery_page_2 span:hover,
   .galery_page_3 span:hover,
   .galery_page_4 span:hover {
     transform: scale(2);
-  }
+  } */
 
     /********************************/
 /******WYŚWIETLANIE GALERII******/
@@ -585,12 +600,17 @@
     background-color: #BBBBBB;
   }
 
-  .galery_page_1 span:hover,
+  .picUp
+  {
+   transform: scale(2);
+   }
+
+  /* .galery_page_1 span:hover,
   .galery_page_2 span:hover,
   .galery_page_3 span:hover,
   .galery_page_4 span:hover {
     transform: scale(2);
-  }
+  } */
 
     /********************************/
 /******WYŚWIETLANIE GALERII******/
