--- a/css/style_galery.css
+++ b/css/style_galery.css
@@ -72,30 +72,29 @@
   /* pointer-events: none; */
 }
 
-.galery_page_1 span,
-.galery_page_2 span,
-.galery_page_3 span,
-.galery_page_4 span {
+.galery_page_1 a,
+.galery_page_2 a,
+.galery_page_3 a,
+.galery_page_4 a {
   display: flex;
   width: 33%;
   height: 33%;
   background-color: rgba(187, 187, 187, 0.8);
   transition: 0.2s linear;
   /* pointer-events: none; */
-  
 }
 
 
-  .galery_page_1 span img,
-  .galery_page_2 span img,
-  .galery_page_3 span img,
-  .galery_page_4 span img {
+  .galery_page_1 a img,
+  .galery_page_2 a img,
+  .galery_page_3 a img,
+  .galery_page_4 a img {
     width: 100%;
   height: 100%;
   object-fit: scale-down;
   pointer-events: auto;
   cursor: pointer;
- 
+
   }
 
   .makePictureBigger
@@ -125,67 +124,67 @@
 /******WYŚWIETLANIE GALERII******/
 /********************************/ 
 
-  .galery_page_1 span:nth-child(1),
-  .galery_page_2 span:nth-child(1),
-  .galery_page_3 span:nth-child(1),
-  .galery_page_4 span:nth-child(1){
+  .galery_page_1 a:nth-child(1),
+  .galery_page_2 a:nth-child(1),
+  .galery_page_3 a:nth-child(1),
+  .galery_page_4 a:nth-child(1){
     transform-origin: top left;
  
   }
 
-  .galery_page_1 span:nth-child(2),
-  .galery_page_2 span:nth-child(2),
-  .galery_page_3 span:nth-child(2),
-  .galery_page_4 span:nth-child(2){
+  .galery_page_1 a:nth-child(2),
+  .galery_page_2 a:nth-child(2),
+  .galery_page_3 a:nth-child(2),
+  .galery_page_4 a:nth-child(2){
     transform-origin: top ;
   }
 
-  .galery_page_1 span:nth-child(3),
-  .galery_page_2 span:nth-child(3),
-  .galery_page_3 span:nth-child(3),
-  .galery_page_4 span:nth-child(3){
+  .galery_page_1 a:nth-child(3),
+  .galery_page_2 a:nth-child(3),
+  .galery_page_3 a:nth-child(3),
+  .galery_page_4 a:nth-child(3){
     transform-origin: top right;
   }
 
-  .galery_page_1 span:nth-child(4),
-  .galery_page_2 span:nth-child(4),
-  .galery_page_3 span:nth-child(4),
-  .galery_page_4 span:nth-child(4){
+  .galery_page_1 a:nth-child(4),
+  .galery_page_2 a:nth-child(4),
+  .galery_page_3 a:nth-child(4),
+  .galery_page_4 a:nth-child(4){
     transform-origin: left;
   }
 
-  .galery_page_1 span:nth-child(5),
-  .galery_page_2 span:nth-child(5),
-  .galery_page_3 span:nth-child(5),
-  .galery_page_4 span:nth-child(5){
+  .galery_page_1 a:nth-child(5),
+  .galery_page_2 a:nth-child(5),
+  .galery_page_3 a:nth-child(5),
+  .galery_page_4 a:nth-child(5){
     transform-origin: center;
   }
 
-  .galery_page_1 span:nth-child(6),
-  .galery_page_2 span:nth-child(6),
-  .galery_page_3 span:nth-child(6),
-  .galery_page_4 span:nth-child(6){
+  .galery_page_1 a:nth-child(6),
+  .galery_page_2 a:nth-child(6),
+  .galery_page_3 a:nth-child(6),
+  .galery_page_4 a:nth-child(6){
     transform-origin: right;
   }
 
-  .galery_page_1 span:nth-child(7),
-  .galery_page_2 span:nth-child(7),
-  .galery_page_3 span:nth-child(7),
-  .galery_page_4 span:nth-child(7){
+  .galery_page_1 a:nth-child(7),
+  .galery_page_2 a:nth-child(7),
+  .galery_page_3 a:nth-child(7),
+  .galery_page_4 a:nth-child(7){
     transform-origin: bottom left;
   }
 
-  .galery_page_1 span:nth-child(8),
-  .galery_page_2 span:nth-child(8),
-  .galery_page_3 span:nth-child(8),
-  .galery_page_4 span:nth-child(8){
+  .galery_page_1 a:nth-child(8),
+  .galery_page_2 a:nth-child(8),
+  .galery_page_3 a:nth-child(8),
+  .galery_page_4 a:nth-child(8){
     transform-origin: bottom;
   }
 
-  .galery_page_1 span:nth-child(9),
-  .galery_page_2 span:nth-child(9),
-  .galery_page_3 span:nth-child(9),
-  .galery_page_4 span:nth-child(9){
+  .galery_page_1 a:nth-child(9),
+  .galery_page_2 a:nth-child(9),
+  .galery_page_3 a:nth-child(9),
+  .galery_page_4 a:nth-child(9){
     transform-origin: bottom right;
   }
 
@@ -277,10 +276,10 @@
 
   }
 
-  .galery_page_1 span,
-  .galery_page_2 span,
-  .galery_page_3 span,
-  .galery_page_4 span {
+  .galery_page_1 a,
+  .galery_page_2 a,
+  .galery_page_3 a,
+  .galery_page_4 a {
     display: flex;
     width: 80vw;
     height: 20vh;
@@ -298,66 +297,66 @@
 /******WYŚWIETLANIE GALERII******/
 /********************************/ 
 
-  .galery_page_1 span:nth-child(1),
-  .galery_page_2 span:nth-child(1),
-  .galery_page_3 span:nth-child(1),
-  .galery_page_4 span:nth-child(1){
+  .galery_page_1 a:nth-child(1),
+  .galery_page_2 a:nth-child(1),
+  .galery_page_3 a:nth-child(1),
+  .galery_page_4 a:nth-child(1){
     transform-origin: center;
   }
 
-  .galery_page_1 span:nth-child(2),
-  .galery_page_2 span:nth-child(2),
-  .galery_page_3 span:nth-child(2),
-  .galery_page_4 span:nth-child(2){
+  .galery_page_1 a:nth-child(2),
+  .galery_page_2 a:nth-child(2),
+  .galery_page_3 a:nth-child(2),
+  .galery_page_4 a:nth-child(2){
     transform-origin: center;
   }
 
-  .galery_page_1 span:nth-child(3),
-  .galery_page_2 span:nth-child(3),
-  .galery_page_3 span:nth-child(3),
-  .galery_page_4 span:nth-child(3){
+  .galery_page_1 a:nth-child(3),
+  .galery_page_2 a:nth-child(3),
+  .galery_page_3 a:nth-child(3),
+  .galery_page_4 a:nth-child(3){
     transform-origin: center;
   }
 
-  .galery_page_1 span:nth-child(4),
-  .galery_page_2 span:nth-child(4),
-  .galery_page_3 span:nth-child(4),
-  .galery_page_4 span:nth-child(4){
+  .galery_page_1 a:nth-child(4),
+  .galery_page_2 a:nth-child(4),
+  .galery_page_3 a:nth-child(4),
+  .galery_page_4 a:nth-child(4){
     transform-origin: center;
   }
 
-  .galery_page_1 span:nth-child(5),
-  .galery_page_2 span:nth-child(5),
-  .galery_page_3 span:nth-child(5),
-  .galery_page_4 span:nth-child(5){
+  .galery_page_1 a:nth-child(5),
+  .galery_page_2 a:nth-child(5),
+  .galery_page_3 a:nth-child(5),
+  .galery_page_4 a:nth-child(5){
     transform-origin: center;
   }
 
-  .galery_page_1 span:nth-child(6),
-  .galery_page_2 span:nth-child(6),
-  .galery_page_3 span:nth-child(6),
-  .galery_page_4 span:nth-child(6){
+  .galery_page_1 a:nth-child(6),
+  .galery_page_2 a:nth-child(6),
+  .galery_page_3 a:nth-child(6),
+  .galery_page_4 a:nth-child(6){
     transform-origin: center;
   }
 
-  .galery_page_1 span:nth-child(7),
-  .galery_page_2 span:nth-child(7),
-  .galery_page_3 span:nth-child(7),
-  .galery_page_4 span:nth-child(7){
+  .galery_page_1 a:nth-child(7),
+  .galery_page_2 a:nth-child(7),
+  .galery_page_3 a:nth-child(7),
+  .galery_page_4 a:nth-child(7){
     transform-origin: center;
   }
 
-  .galery_page_1 span:nth-child(8),
-  .galery_page_2 span:nth-child(8),
-  .galery_page_3 span:nth-child(8),
-  .galery_page_4 span:nth-child(8){
+  .galery_page_1 a:nth-child(8),
+  .galery_page_2 a:nth-child(8),
+  .galery_page_3 a:nth-child(8),
+  .galery_page_4 a:nth-child(8){
     transform-origin: center;
   }
 
-  .galery_page_1 span:nth-child(9),
-  .galery_page_2 span:nth-child(9),
-  .galery_page_3 span:nth-child(9),
-  .galery_page_4 span:nth-child(9){
+  .galery_page_1 a:nth-child(9),
+  .galery_page_2 a:nth-child(9),
+  .galery_page_3 a:nth-child(9),
+  .galery_page_4 a:nth-child(9){
     transform-origin: center;
   }
 
@@ -428,10 +427,10 @@
 
   }
 
-  .galery_page_1 span,
-  .galery_page_2 span,
-  .galery_page_3 span,
-  .galery_page_4 span {
+  .galery_page_1 a,
+  .galery_page_2 a,
+  .galery_page_3 a,
+  .galery_page_4 a {
     display: flex;
     width: 80vw;
     height: 20vh;
@@ -448,66 +447,66 @@
 /******WYŚWIETLANIE GALERII******/
 /********************************/ 
 
-.galery_page_1 span:nth-child(1),
-.galery_page_2 span:nth-child(1),
-.galery_page_3 span:nth-child(1),
-.galery_page_4 span:nth-child(1){
+.galery_page_1 a:nth-child(1),
+.galery_page_2 a:nth-child(1),
+.galery_page_3 a:nth-child(1),
+.galery_page_4 a:nth-child(1){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(2),
-.galery_page_2 span:nth-child(2),
-.galery_page_3 span:nth-child(2),
-.galery_page_4 span:nth-child(2){
+.galery_page_1 a:nth-child(2),
+.galery_page_2 a:nth-child(2),
+.galery_page_3 a:nth-child(2),
+.galery_page_4 a:nth-child(2){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(3),
-.galery_page_2 span:nth-child(3),
-.galery_page_3 span:nth-child(3),
-.galery_page_4 span:nth-child(3){
+.galery_page_1 a:nth-child(3),
+.galery_page_2 a:nth-child(3),
+.galery_page_3 a:nth-child(3),
+.galery_page_4 a:nth-child(3){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(4),
-.galery_page_2 span:nth-child(4),
-.galery_page_3 span:nth-child(4),
-.galery_page_4 span:nth-child(4){
+.galery_page_1 a:nth-child(4),
+.galery_page_2 a:nth-child(4),
+.galery_page_3 a:nth-child(4),
+.galery_page_4 a:nth-child(4){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(5),
-.galery_page_2 span:nth-child(5),
-.galery_page_3 span:nth-child(5),
-.galery_page_4 span:nth-child(5){
+.galery_page_1 a:nth-child(5),
+.galery_page_2 a:nth-child(5),
+.galery_page_3 a:nth-child(5),
+.galery_page_4 a:nth-child(5){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(6),
-.galery_page_2 span:nth-child(6),
-.galery_page_3 span:nth-child(6),
-.galery_page_4 span:nth-child(6){
+.galery_page_1 a:nth-child(6),
+.galery_page_2 a:nth-child(6),
+.galery_page_3 a:nth-child(6),
+.galery_page_4 a:nth-child(6){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(7),
-.galery_page_2 span:nth-child(7),
-.galery_page_3 span:nth-child(7),
-.galery_page_4 span:nth-child(7){
+.galery_page_1 a:nth-child(7),
+.galery_page_2 a:nth-child(7),
+.galery_page_3 a:nth-child(7),
+.galery_page_4 a:nth-child(7){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(8),
-.galery_page_2 span:nth-child(8),
-.galery_page_3 span:nth-child(8),
-.galery_page_4 span:nth-child(8){
+.galery_page_1 a:nth-child(8),
+.galery_page_2 a:nth-child(8),
+.galery_page_3 a:nth-child(8),
+.galery_page_4 a:nth-child(8){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(9),
-.galery_page_2 span:nth-child(9),
-.galery_page_3 span:nth-child(9),
-.galery_page_4 span:nth-child(9){
+.galery_page_1 a:nth-child(9),
+.galery_page_2 a:nth-child(9),
+.galery_page_3 a:nth-child(9),
+.galery_page_4 a:nth-child(9){
   transform-origin: center;
 }
 
@@ -576,16 +575,18 @@
 
   }
 
-  .galery_page_1 span,
-  .galery_page_2 span,
-  .galery_page_3 span,
-  .galery_page_4 span {
+  .galery_page_1 a,
+  .galery_page_2 a,
+  .galery_page_3 a,
+  .galery_page_4 a {
     display: flex;
     width: 80vw;
     height: 300px;
     margin-top: 5px;
     background-color: #BBBBBB;
   }
+
+
 
   .makePictureBigger
  {
@@ -596,66 +597,66 @@
 /******WYŚWIETLANIE GALERII******/
 /********************************/ 
 
-.galery_page_1 span:nth-child(1),
-.galery_page_2 span:nth-child(1),
-.galery_page_3 span:nth-child(1),
-.galery_page_4 span:nth-child(1){
+.galery_page_1 a:nth-child(1),
+.galery_page_2 a:nth-child(1),
+.galery_page_3 a:nth-child(1),
+.galery_page_4 a:nth-child(1){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(2),
-.galery_page_2 span:nth-child(2),
-.galery_page_3 span:nth-child(2),
-.galery_page_4 span:nth-child(2){
+.galery_page_1 a:nth-child(2),
+.galery_page_2 a:nth-child(2),
+.galery_page_3 a:nth-child(2),
+.galery_page_4 a:nth-child(2){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(3),
-.galery_page_2 span:nth-child(3),
-.galery_page_3 span:nth-child(3),
-.galery_page_4 span:nth-child(3){
+.galery_page_1 a:nth-child(3),
+.galery_page_2 a:nth-child(3),
+.galery_page_3 a:nth-child(3),
+.galery_page_4 a:nth-child(3){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(4),
-.galery_page_2 span:nth-child(4),
-.galery_page_3 span:nth-child(4),
-.galery_page_4 span:nth-child(4){
+.galery_page_1 a:nth-child(4),
+.galery_page_2 a:nth-child(4),
+.galery_page_3 a:nth-child(4),
+.galery_page_4 a:nth-child(4){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(5),
-.galery_page_2 span:nth-child(5),
-.galery_page_3 span:nth-child(5),
-.galery_page_4 span:nth-child(5){
+.galery_page_1 a:nth-child(5),
+.galery_page_2 a:nth-child(5),
+.galery_page_3 a:nth-child(5),
+.galery_page_4 a:nth-child(5){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(6),
-.galery_page_2 span:nth-child(6),
-.galery_page_3 span:nth-child(6),
-.galery_page_4 span:nth-child(6){
+.galery_page_1 a:nth-child(6),
+.galery_page_2 a:nth-child(6),
+.galery_page_3 a:nth-child(6),
+.galery_page_4 a:nth-child(6){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(7),
-.galery_page_2 span:nth-child(7),
-.galery_page_3 span:nth-child(7),
-.galery_page_4 span:nth-child(7){
+.galery_page_1 a:nth-child(7),
+.galery_page_2 a:nth-child(7),
+.galery_page_3 a:nth-child(7),
+.galery_page_4 a:nth-child(7){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(8),
-.galery_page_2 span:nth-child(8),
-.galery_page_3 span:nth-child(8),
-.galery_page_4 span:nth-child(8){
+.galery_page_1 a:nth-child(8),
+.galery_page_2 a:nth-child(8),
+.galery_page_3 a:nth-child(8),
+.galery_page_4 a:nth-child(8){
   transform-origin: center;
 }
 
-.galery_page_1 span:nth-child(9),
-.galery_page_2 span:nth-child(9),
-.galery_page_3 span:nth-child(9),
-.galery_page_4 span:nth-child(9){
+.galery_page_1 a:nth-child(9),
+.galery_page_2 a:nth-child(9),
+.galery_page_3 a:nth-child(9),
+.galery_page_4 a:nth-child(9){
   transform-origin: center;
 }
 }
