--- a/css/style_main.css
+++ b/css/style_main.css
@@ -34,7 +34,7 @@ html{
   scroll-padding-top: 9.3vh;
 }
 
-main {
+section {
   display: flex;
   width: 90%;
   position: sticky;
@@ -46,7 +46,7 @@ main {
 }
 
 
-section {
+main {
   display: flex;
   flex-direction: column;
   width: 90%;
@@ -90,14 +90,15 @@ nav {
     flex-direction: column;
   }
 
-  main {
+  section {
     flex-direction: column;
     height: 50px;
     width: 100%;
+    z-index: 999;
   }
 
   
-section {
+main {
   width: 100%;
 }
 
@@ -136,14 +137,15 @@ section {
     flex-direction: column;
   }
 
-  main {
+  section {
     flex-direction: column;
-    height: 80px;
+    height: 85px;
     width: 100%;
+    z-index: 999;
   }
 
   
-section {
+main {
   width: 100%;
 }
 
@@ -183,14 +185,15 @@ section {
     flex-direction: column;
   }
 
-  main {
+  section {
     flex-direction: column;
-    height: 100px;
+    height: 110px;
     width: 100%;
+    z-index: 999;
   }
 
   
-section {
+main {
   width: 100%;
 }
 
@@ -227,7 +230,7 @@ section {
     width: 100vw;
   }
 
-  section {
+  main {
     display: flex;
     flex-direction: column;
     width: 90%;
@@ -246,7 +249,7 @@ section {
     width: 100vw;
   }
 
-  section {
+  main {
     display: flex;
     flex-direction: column;
     width: 90%;
@@ -266,7 +269,7 @@ section {
     width: 100vw;
   }
 
-  section {
+  main {
     display: flex;
     flex-direction: column;
     width: 90%;
@@ -286,7 +289,7 @@ section {
     width: 100vw;
   }
 
-  section {
+  main {
     display: flex;
     flex-direction: column;
     width: 90%;
